--- a/index.html
+++ b/index.html
@@ -1,13 +1,21 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="style.css">
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <link rel="stylesheet" href="style.css" />
     <title>Arays</title>
-</head>
-<body>
-    
+  </head>
+
+  <body>
+    <div class="intro">
+      <h1>Hot or Cold</h1>
+      <p>My phone is missing, can you fond it?</p>
+      <button>Start</button>
+    </div>
+
     <script src="./array.js"></script>
-</body>
+    <script src="./object.js"></script>
+    <script src="./oopFun.js"></script>
+  </body>
 </html>
