[ADDED] Misc.js and Promise.js

--- a/index.html
+++ b/index.html
@@ -8,14 +8,15 @@
   </head>
 
   <body>
-    <div class="intro">
+    <!-- <div class="intro">
       <h1>Hot or Cold</h1>
       <p>My phone is missing, can you fond it?</p>
       <button>Start</button>
-    </div>
+    </div> -->
 
     <script src="./array.js"></script>
     <script src="./object.js"></script>
     <script src="./oopFun.js"></script>
+    <script src="./misc.js"></script>
   </body>
 </html>
